--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Strategii pentru Servicii Digitale — CivicTech România</title>
+  <title>Cod de Conduită — CivicTech România</title>
   <meta charset='UTF-8'/>
   <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
   <meta property="og:image" content="{{site.baseurl}}/assets/images/fb.jpg" />
